--- a/src/widgets/HexdumpWidget.ui
+++ b/src/widgets/HexdumpWidget.ui
@@ -152,6 +152,13 @@ QToolTip {
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="2">
+       <widget class="QLabel" name="hexHeaderLabel">
+        <property name="text">
+         <string>0  1  2  3 ...</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0">
        <widget class="QPlainTextEdit" name="hexOffsetText">
         <property name="sizePolicy">
@@ -189,7 +196,21 @@ QToolTip {
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="0" column="4">
+       <widget class="QLabel" name="asciiHeaderLabel">
+        <property name="text">
+         <string>0123...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="offsetHeaderLabel">
+        <property name="text">
+         <string>Offset</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
        <widget class="QPlainTextEdit" name="hexHexText">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -235,7 +256,14 @@ QToolTip {
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="1" column="1">
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4">
        <widget class="QPlainTextEdit" name="hexASCIIText">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -287,24 +315,10 @@ QToolTip {
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="offsetHeaderLabel">
-        <property name="text">
-         <string>Offset</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="hexHeaderLabel">
-        <property name="text">
-         <string>0  1  2  3 ...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="asciiHeaderLabel">
-        <property name="text">
-         <string>0123...</string>
+      <item row="1" column="3">
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
         </property>
        </widget>
       </item>
